[package]
edition    = "2021"
name       = "brainrot"
repository = "https://github.com/LeoLuxo/brainrot"
version    = "0.1.0"


[features]
default = []

angle   = []
bevy    = ["dep:bevy_ecs"]
camera  = ["angle"]
macros  = []
speed   = ["vek"]
texture = ["dep:image", "dep:wgpu"]
tuples  = []

vek = ["dep:vek"]


[dev-dependencies]
approx = "0.5.1"
rstest = "0.21.0"


[dependencies]
bevy_ecs = { version = "=0.13.2", optional = true }
image    = { version = "0.25", default-features = false, optional = true }
vek      = { version = "0.17", features = ["bytemuck", "mint", "rgb", "rgba", "serde", "uv", "uvw"], optional = true }
wgpu     = { version = "0.20.1", optional = true }

anyhow      = "1.0"
derive_more = "0.99"
downcast-rs = "1.2"
paste       = "1.0"
