[package]
edition    = "2021"
name       = "brainrot"
repository = "https://github.com/LeoLuxo/brainrot"
version    = "0.1.0"


[features]
default = []

angle     = []
bevy      = ["dep:bevy_ecs"]
camera_3d = ["angle", "vek"]
convert   = ["dep:egui", "dep:mint", "dep:winit", "egui/mint", "vek", "winit/mint"]
macros    = []
shader    = ["dep:wgpu"]
speed     = ["vek"]
texture   = ["dep:image", "dep:wgpu"]
tuples    = []

vek = ["dep:vek"]


[dev-dependencies]
approx = "0.5.1"
rstest = "0.21.0"


[dependencies]
bevy_ecs = { version = "=0.13.2", optional = true }
image    = { version = "0.25", default-features = false, optional = true }
mint     = { version = "0.5", optional = true }
vek      = { version = "0.17", features = ["bytemuck", "mint", "rgb", "rgba", "serde", "uv", "uvw"], optional = true }
wgpu     = { version = "=0.19.1", optional = true }

egui  = { version = "0.27", optional = true }
winit = { version = "0.29", optional = true }

anyhow      = "1.0"
derive_more = "0.99"
downcast-rs = "1.2"
paste       = "1.0"
regex       = "1.10.5"
include_dir = "0.7.3"
